--- a/senac-front/angular.json
+++ b/senac-front/angular.json
@@ -58,6 +58,7 @@
             ],
             "scripts": [
               "node_modules/chart.js/dist/chart.js",
+              "node_modules/chart.js/dist/chart.js",
               "node_modules/chart.js/dist/chart.js"
             ]
           },
